deploy: e5d4aa603e6aa1cc0aaabee179baf724f99253aa

--- a/tutorials/g_td_sim.ipynb
+++ b/tutorials/g_td_sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4b1d4809",
+   "id": "c9af2518",
    "metadata": {},
    "source": [
     "# Time-Domain simulations\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "436cb1dc",
+   "id": "d4e0cc9e",
    "metadata": {},
    "source": [
     "We introduce time-domain simulations, which are based on GRANAD's default master equation"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb4d2b6d",
+   "id": "f7d74da4",
    "metadata": {},
    "source": [
     "$$\\dot{\\rho}(t) = -i [H[t,\\rho(t)], \\rho] + \\mathcal{D}[t, \\rho]$$"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5ac114b",
+   "id": "feab0b38",
    "metadata": {},
    "source": [
     "The non-linear Hamiltonian is given by"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7d61dc3",
+   "id": "e4a10192",
    "metadata": {},
    "source": [
     "$$H[t,\\rho(t)] = h^{0} + \\vec{E} \\vec{P} + C(\\rho(t) - \\rho^{0})$$"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec5b166",
+   "id": "19d04df8",
    "metadata": {},
    "source": [
     "where "
@@ -50,17 +50,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4093532c",
+   "id": "45927488",
    "metadata": {},
    "source": [
     "1. $h^{0}$ is the unperturbed or bare Hamiltonian constructed from localized orbitals.\n",
-    "2. $\\vec{P}$ is the dipole moment operator depending on space $\\vec{r}$ and transition dipole moments $\\vec{d}$, leading to an interatomic potential with unit charge $e$, given by $e \\vec{E} \\vec{r}$, and an intra-atomic potential $\\vec{E} \\vec{d}$.\n",
-    "3. $\\rho^{0}$ is the stationary density matrix of the system's ground state, and $C$ is the Coulomb matrix (a subset of two-body matrix elements)."
+    "2. $\\vec{P}$ is the polarization operator depending on lattice site positions $\\vec{r}$. Additonal dipole moment elements $\\vec{d}_{ij}$ between orbitals $i$, $j$ of the same site can additionally be taken into account. This leads to an interatomic potential with unit charge $e$, given by $e \\vec{E} \\vec{r}$, and an intra-atomic potential $\\vec{E} \\vec{d}$.\n",
+    "3. $\\rho^{0}$ is the stationary density matrix of the system's ground state, and $C$ is the Coulomb matrix."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ef84ed5f",
+   "id": "922b60d8",
    "metadata": {},
    "source": [
     "This expression is the dipole-gauge expression for the Hamiltonian including an external electric field $\\vec{E}$."
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37c3742",
+   "id": "739cb8e7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6a424de",
+   "id": "15c305e3",
    "metadata": {},
    "source": [
     "You can compute multiple observables in one simulation run"
@@ -87,13 +87,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2d86ed52",
+   "id": "3291ee0b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:30:44.837598Z",
-     "iopub.status.busy": "2025-01-30T10:30:44.837427Z",
-     "iopub.status.idle": "2025-01-30T10:30:53.827594Z",
-     "shell.execute_reply": "2025-01-30T10:30:53.827049Z"
+     "iopub.execute_input": "2025-01-30T11:09:55.750383Z",
+     "iopub.status.busy": "2025-01-30T11:09:55.750209Z",
+     "iopub.status.idle": "2025-01-30T11:10:04.514904Z",
+     "shell.execute_reply": "2025-01-30T11:10:04.514345Z"
     }
    },
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "013dc364",
+   "id": "51246739",
    "metadata": {},
    "source": [
     "The result object stores this info. Operators are concatenated in the order you passed them in."
@@ -149,13 +149,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c9159b9a",
+   "id": "27240e04",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:30:53.829586Z",
-     "iopub.status.busy": "2025-01-30T10:30:53.829203Z",
-     "iopub.status.idle": "2025-01-30T10:30:53.832626Z",
-     "shell.execute_reply": "2025-01-30T10:30:53.831988Z"
+     "iopub.execute_input": "2025-01-30T11:10:04.516953Z",
+     "iopub.status.busy": "2025-01-30T11:10:04.516590Z",
+     "iopub.status.idle": "2025-01-30T11:10:04.520294Z",
+     "shell.execute_reply": "2025-01-30T11:10:04.519728Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0730835",
+   "id": "ff63870e",
    "metadata": {},
    "source": [
     "The induced dipole moment at timestep 10 is given by"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "be386547",
+   "id": "a857af9b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:30:53.834540Z",
-     "iopub.status.busy": "2025-01-30T10:30:53.834171Z",
-     "iopub.status.idle": "2025-01-30T10:30:53.857676Z",
-     "shell.execute_reply": "2025-01-30T10:30:53.857088Z"
+     "iopub.execute_input": "2025-01-30T11:10:04.522324Z",
+     "iopub.status.busy": "2025-01-30T11:10:04.521935Z",
+     "iopub.status.idle": "2025-01-30T11:10:04.547390Z",
+     "shell.execute_reply": "2025-01-30T11:10:04.546905Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb071433",
+   "id": "fe588439",
    "metadata": {},
    "source": [
     "Induced current at timestep 10"
@@ -217,13 +217,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c82c3b2a",
+   "id": "e5e1bcbb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:30:53.859631Z",
-     "iopub.status.busy": "2025-01-30T10:30:53.859262Z",
-     "iopub.status.idle": "2025-01-30T10:30:53.863561Z",
-     "shell.execute_reply": "2025-01-30T10:30:53.862952Z"
+     "iopub.execute_input": "2025-01-30T11:10:04.549099Z",
+     "iopub.status.busy": "2025-01-30T11:10:04.548901Z",
+     "iopub.status.idle": "2025-01-30T11:10:04.553097Z",
+     "shell.execute_reply": "2025-01-30T11:10:04.552547Z"
     },
     "lines_to_next_cell": 2
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11025f4d",
+   "id": "eb8c398e",
    "metadata": {},
    "source": [
     "We can access the Fourier transform as"
@@ -252,13 +252,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "37b0a018",
+   "id": "c98d7bef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:30:53.865541Z",
-     "iopub.status.busy": "2025-01-30T10:30:53.865172Z",
-     "iopub.status.idle": "2025-01-30T10:30:54.225999Z",
-     "shell.execute_reply": "2025-01-30T10:30:54.225519Z"
+     "iopub.execute_input": "2025-01-30T11:10:04.555058Z",
+     "iopub.status.busy": "2025-01-30T11:10:04.554650Z",
+     "iopub.status.idle": "2025-01-30T11:10:04.949053Z",
+     "shell.execute_reply": "2025-01-30T11:10:04.948373Z"
     }
    },
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95bde411",
+   "id": "a13b9fa3",
    "metadata": {},
    "source": [
     "From the classical continuity equation for the charge and current density $\\rho(\\vec{r},t), \\vec{j}(\\vec{r},t)$ and dipole moment density $\\vec{p}(\\vec{r},t)$, we have"
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84bf494c",
+   "id": "b0ab1d7a",
    "metadata": {},
    "source": [
     "$$\\dot{\\rho}(\\vec{r}, t) = -\\nabla \\vec{j}(\\vec{r}, t) = \\nabla \\dot{\\vec{p}}(\\vec{r}, t) \\implies \\dot{\\vec{p}}(\\vec{r},t) = \\vec{j}(\\vec{r},t)$$"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4f6af75",
+   "id": "4010c521",
    "metadata": {},
    "source": [
     "After Fourier transformation, we obtain"
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a782979b",
+   "id": "a46a6053",
    "metadata": {},
    "source": [
     "$$-i\\omega \\vec{p}(\\vec{r}, \\omega) = \\vec{j}(\\vec{r}, \\omega)$$"
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b5cbf9b",
+   "id": "5670d09b",
    "metadata": {},
    "source": [
     "Its integrated form is given by"
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "238ba705",
+   "id": "813d4553",
    "metadata": {},
    "source": [
     "$$\\int d\\vec{r} \\dot{\\vec{p}}(\\vec{r},t) = \\dot{\\vec{p}}(t) = \\int d\\vec{r} \\vec{j}(\\vec{r},t) =  \\vec{j}(t)$$ "
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a245b6c",
+   "id": "f778c63a",
    "metadata": {},
    "source": [
     "$\\vec{j}(t)$ and $\\vec{p}(t)$ are the total current and dipole moment respectively. As classical quantities are given by ensemble averages of quantum operators, we can\n",
@@ -328,13 +328,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2c526c3a",
+   "id": "012e87ec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:30:54.228259Z",
-     "iopub.status.busy": "2025-01-30T10:30:54.227904Z",
-     "iopub.status.idle": "2025-01-30T10:30:54.631144Z",
-     "shell.execute_reply": "2025-01-30T10:30:54.630598Z"
+     "iopub.execute_input": "2025-01-30T11:10:04.951692Z",
+     "iopub.status.busy": "2025-01-30T11:10:04.951219Z",
+     "iopub.status.idle": "2025-01-30T11:10:05.369767Z",
+     "shell.execute_reply": "2025-01-30T11:10:05.369195Z"
     },
     "lines_to_next_cell": 2
    },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35936a28",
+   "id": "d452aeea",
    "metadata": {},
    "source": [
     "The field is also accessible"
@@ -373,13 +373,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f01e3726",
+   "id": "4ca3f918",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:30:54.633130Z",
-     "iopub.status.busy": "2025-01-30T10:30:54.632943Z",
-     "iopub.status.idle": "2025-01-30T10:30:54.636190Z",
-     "shell.execute_reply": "2025-01-30T10:30:54.635592Z"
+     "iopub.execute_input": "2025-01-30T11:10:05.371925Z",
+     "iopub.status.busy": "2025-01-30T11:10:05.371561Z",
+     "iopub.status.idle": "2025-01-30T11:10:05.374802Z",
+     "shell.execute_reply": "2025-01-30T11:10:05.374206Z"
     }
    },
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78f3b203",
+   "id": "8733ea2c",
    "metadata": {},
    "source": [
     "## Density matrices"
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a27902a2",
+   "id": "809217b7",
    "metadata": {},
    "source": [
     "If we want to only get density matrices, we can  omit the operator list. The result object then contains a one-element list."
@@ -414,13 +414,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a682dab9",
+   "id": "c924418a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:30:54.638142Z",
-     "iopub.status.busy": "2025-01-30T10:30:54.637817Z",
-     "iopub.status.idle": "2025-01-30T10:30:57.265298Z",
-     "shell.execute_reply": "2025-01-30T10:30:57.264690Z"
+     "iopub.execute_input": "2025-01-30T11:10:05.376554Z",
+     "iopub.status.busy": "2025-01-30T11:10:05.376370Z",
+     "iopub.status.idle": "2025-01-30T11:10:08.021508Z",
+     "shell.execute_reply": "2025-01-30T11:10:08.021012Z"
     }
    },
    "outputs": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a625be37",
+   "id": "37fda7eb",
    "metadata": {},
    "source": [
     "We can convert them to energy basis"
@@ -470,13 +470,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a10e3d4b",
+   "id": "a15e0a24",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:30:57.267372Z",
-     "iopub.status.busy": "2025-01-30T10:30:57.266993Z",
-     "iopub.status.idle": "2025-01-30T10:30:59.189921Z",
-     "shell.execute_reply": "2025-01-30T10:30:59.189326Z"
+     "iopub.execute_input": "2025-01-30T11:10:08.023344Z",
+     "iopub.status.busy": "2025-01-30T11:10:08.023154Z",
+     "iopub.status.idle": "2025-01-30T11:10:09.942869Z",
+     "shell.execute_reply": "2025-01-30T11:10:09.942356Z"
     }
    },
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fc14648",
+   "id": "3f0f4d7d",
    "metadata": {},
    "source": [
     "## Occupations"
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7640021b",
+   "id": "2e9f7535",
    "metadata": {},
    "source": [
     "To reduce memory consumption, we can extract only the site occupations to avoid storing the entire stack of density matices in memory. "
@@ -512,13 +512,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "031c6d19",
+   "id": "0ccf6784",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:30:59.192009Z",
-     "iopub.status.busy": "2025-01-30T10:30:59.191622Z",
-     "iopub.status.idle": "2025-01-30T10:31:01.780784Z",
-     "shell.execute_reply": "2025-01-30T10:31:01.780259Z"
+     "iopub.execute_input": "2025-01-30T11:10:09.945053Z",
+     "iopub.status.busy": "2025-01-30T11:10:09.944660Z",
+     "iopub.status.idle": "2025-01-30T11:10:12.543471Z",
+     "shell.execute_reply": "2025-01-30T11:10:12.542950Z"
     }
    },
    "outputs": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf67c7f",
+   "id": "084048ab",
    "metadata": {},
    "source": [
     "Further reduction of the memory consumption can be controlled by the grid argument, which describes the density of the time domain sampling grid, explained in the API section on the `master_equation` method."
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f8f65d0",
+   "id": "6cb5a3ed",
    "metadata": {},
    "source": [
     "## Initially excited states"
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4c5785d",
+   "id": "7d2ad352",
    "metadata": {},
    "source": [
     "GRANAD allows to set initially excited states by specifying the single-particle transition in the density matrix as follows"
@@ -584,13 +584,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "06a76961",
+   "id": "6e62c602",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:31:01.782911Z",
-     "iopub.status.busy": "2025-01-30T10:31:01.782546Z",
-     "iopub.status.idle": "2025-01-30T10:31:03.590542Z",
-     "shell.execute_reply": "2025-01-30T10:31:03.589917Z"
+     "iopub.execute_input": "2025-01-30T11:10:12.545578Z",
+     "iopub.status.busy": "2025-01-30T11:10:12.545164Z",
+     "iopub.status.idle": "2025-01-30T11:10:14.437797Z",
+     "shell.execute_reply": "2025-01-30T11:10:14.437260Z"
     }
    },
    "outputs": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "997fadf3",
+   "id": "72110aa6",
    "metadata": {},
    "source": [
     "In case of degeneracies, GRANAD distributes electrons equally among all degenerate energy levels, as demonstrated in the figure above."
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce3357a",
+   "id": "3ad46105",
    "metadata": {},
    "source": [
     "## Energy occupations"
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee46ff82",
+   "id": "8783d347",
    "metadata": {},
    "source": [
     "Similarly to site occupations, only energy occupations can also be obtained from the time-domain simulations."
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1430604b",
+   "id": "57677d99",
    "metadata": {},
    "source": [
     "*Warning*: this introduces additional cubic complexity "
@@ -645,13 +645,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "44bac6bf",
+   "id": "c01e3792",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:31:03.592520Z",
-     "iopub.status.busy": "2025-01-30T10:31:03.592139Z",
-     "iopub.status.idle": "2025-01-30T10:31:08.955609Z",
-     "shell.execute_reply": "2025-01-30T10:31:08.955045Z"
+     "iopub.execute_input": "2025-01-30T11:10:14.439846Z",
+     "iopub.status.busy": "2025-01-30T11:10:14.439429Z",
+     "iopub.status.idle": "2025-01-30T11:10:19.789300Z",
+     "shell.execute_reply": "2025-01-30T11:10:19.788746Z"
     }
    },
    "outputs": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60c52577",
+   "id": "f531b391",
    "metadata": {},
    "source": [
     "## Combinations"
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95736cf1",
+   "id": "89504cb4",
    "metadata": {},
    "source": [
     "We can also extract multiple quantities at the same time"
@@ -716,13 +716,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4bed37bc",
+   "id": "dd048633",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:31:08.957849Z",
-     "iopub.status.busy": "2025-01-30T10:31:08.957484Z",
-     "iopub.status.idle": "2025-01-30T10:31:11.839743Z",
-     "shell.execute_reply": "2025-01-30T10:31:11.839152Z"
+     "iopub.execute_input": "2025-01-30T11:10:19.791194Z",
+     "iopub.status.busy": "2025-01-30T11:10:19.790880Z",
+     "iopub.status.idle": "2025-01-30T11:10:22.737398Z",
+     "shell.execute_reply": "2025-01-30T11:10:22.736788Z"
     }
    },
    "outputs": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbaac28b",
+   "id": "52627283",
    "metadata": {},
    "source": [
     "The output will now contain three arrays: induced dipole moments, site occupations and full density matrices"
@@ -770,13 +770,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8955e64d",
+   "id": "3cb23c6c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:31:11.841744Z",
-     "iopub.status.busy": "2025-01-30T10:31:11.841561Z",
-     "iopub.status.idle": "2025-01-30T10:31:11.845278Z",
-     "shell.execute_reply": "2025-01-30T10:31:11.844820Z"
+     "iopub.execute_input": "2025-01-30T11:10:22.739176Z",
+     "iopub.status.busy": "2025-01-30T11:10:22.738970Z",
+     "iopub.status.idle": "2025-01-30T11:10:22.742780Z",
+     "shell.execute_reply": "2025-01-30T11:10:22.742173Z"
     }
    },
    "outputs": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96ddafdf",
+   "id": "0c4bd6bc",
    "metadata": {},
    "source": [
     "## EPI"
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30f9a08b",
+   "id": "9805a4bd",
    "metadata": {},
    "source": [
     "The energy-based plasmonicity index introduced by [Müller et al.](https://pubs.acs.org/doi/10.1021/acs.jpcc.0c07964) is a quantity to characterize the steady-state plasmonicity. We use plane wave illumination to drive the system into a steady state and then compute the EPI."
@@ -817,13 +817,13 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0895699c",
+   "id": "5e8bf40e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:31:11.846957Z",
-     "iopub.status.busy": "2025-01-30T10:31:11.846781Z",
-     "iopub.status.idle": "2025-01-30T10:31:14.667297Z",
-     "shell.execute_reply": "2025-01-30T10:31:14.666770Z"
+     "iopub.execute_input": "2025-01-30T11:10:22.744930Z",
+     "iopub.status.busy": "2025-01-30T11:10:22.744580Z",
+     "iopub.status.idle": "2025-01-30T11:10:25.639306Z",
+     "shell.execute_reply": "2025-01-30T11:10:25.638782Z"
     }
    },
    "outputs": [
