--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40253846",
+   "id": "577d4096",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e68b96c6",
+   "id": "803b4788",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7acc82fb",
+   "id": "a23c76da",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7310861c",
+   "id": "73674c45",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "829f3b20",
+   "id": "d792bfb9",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6034c2c4",
+   "id": "34a435ec",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "36cac731",
+   "id": "fd46139c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:22.082369Z",
-     "iopub.status.busy": "2025-01-30T10:29:22.082167Z",
-     "iopub.status.idle": "2025-01-30T10:29:25.071754Z",
-     "shell.execute_reply": "2025-01-30T10:29:25.071154Z"
+     "iopub.execute_input": "2025-01-30T11:08:34.161767Z",
+     "iopub.status.busy": "2025-01-30T11:08:34.161345Z",
+     "iopub.status.idle": "2025-01-30T11:08:37.288216Z",
+     "shell.execute_reply": "2025-01-30T11:08:37.287662Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e12373b",
+   "id": "bc55843b",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beb62440",
+   "id": "0a6b33c9",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d428d59",
+   "id": "e1bdbc1d",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ea3dc00",
+   "id": "d6727939",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bab898e6",
+   "id": "ef6fef1d",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cf06c97",
+   "id": "d06e2a6e",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3003680f",
+   "id": "9aa744ef",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23d3cdcf",
+   "id": "d6090dcc",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "330f2c9f",
+   "id": "3af95b47",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:25.073948Z",
-     "iopub.status.busy": "2025-01-30T10:29:25.073684Z",
-     "iopub.status.idle": "2025-01-30T10:29:27.100540Z",
-     "shell.execute_reply": "2025-01-30T10:29:27.099958Z"
+     "iopub.execute_input": "2025-01-30T11:08:37.290385Z",
+     "iopub.status.busy": "2025-01-30T11:08:37.290120Z",
+     "iopub.status.idle": "2025-01-30T11:08:39.380891Z",
+     "shell.execute_reply": "2025-01-30T11:08:39.380358Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53abc535",
+   "id": "fb51d40f",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "85769df3",
+   "id": "89fee948",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:27.102407Z",
-     "iopub.status.busy": "2025-01-30T10:29:27.102154Z",
-     "iopub.status.idle": "2025-01-30T10:29:27.105769Z",
-     "shell.execute_reply": "2025-01-30T10:29:27.105167Z"
+     "iopub.execute_input": "2025-01-30T11:08:39.382992Z",
+     "iopub.status.busy": "2025-01-30T11:08:39.382614Z",
+     "iopub.status.idle": "2025-01-30T11:08:39.385954Z",
+     "shell.execute_reply": "2025-01-30T11:08:39.385407Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad89da9a",
+   "id": "36b7e975",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b585842",
+   "id": "36863581",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c71fb99",
+   "id": "f2559673",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5e0fd76",
+   "id": "b4e6ebc5",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5bd92e22",
+   "id": "d6509045",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:27.107747Z",
-     "iopub.status.busy": "2025-01-30T10:29:27.107415Z",
-     "iopub.status.idle": "2025-01-30T10:29:27.152896Z",
-     "shell.execute_reply": "2025-01-30T10:29:27.152330Z"
+     "iopub.execute_input": "2025-01-30T11:08:39.387883Z",
+     "iopub.status.busy": "2025-01-30T11:08:39.387543Z",
+     "iopub.status.idle": "2025-01-30T11:08:39.432198Z",
+     "shell.execute_reply": "2025-01-30T11:08:39.431626Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d43717a",
+   "id": "cbe1fb2e",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9da59cc0",
+   "id": "5bfb261e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:27.154753Z",
-     "iopub.status.busy": "2025-01-30T10:29:27.154562Z",
-     "iopub.status.idle": "2025-01-30T10:29:27.223846Z",
-     "shell.execute_reply": "2025-01-30T10:29:27.223316Z"
+     "iopub.execute_input": "2025-01-30T11:08:39.434222Z",
+     "iopub.status.busy": "2025-01-30T11:08:39.433839Z",
+     "iopub.status.idle": "2025-01-30T11:08:39.504165Z",
+     "shell.execute_reply": "2025-01-30T11:08:39.503505Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b730d835",
+   "id": "d0578ec5",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d46a3010",
+   "id": "02b8edcf",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e9a3c499",
+   "id": "c7147873",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:27.226017Z",
-     "iopub.status.busy": "2025-01-30T10:29:27.225632Z",
-     "iopub.status.idle": "2025-01-30T10:29:27.255656Z",
-     "shell.execute_reply": "2025-01-30T10:29:27.255084Z"
+     "iopub.execute_input": "2025-01-30T11:08:39.506176Z",
+     "iopub.status.busy": "2025-01-30T11:08:39.505966Z",
+     "iopub.status.idle": "2025-01-30T11:08:39.535940Z",
+     "shell.execute_reply": "2025-01-30T11:08:39.535438Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a6f19f9",
+   "id": "559c5b55",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4273802",
+   "id": "4a5254c1",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd1bc456",
+   "id": "c85e9ef6",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f3e1a13",
+   "id": "ac388bb2",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7774450b",
+   "id": "0b036a85",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bb56afb9",
+   "id": "e4f444c9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:27.257634Z",
-     "iopub.status.busy": "2025-01-30T10:29:27.257426Z",
-     "iopub.status.idle": "2025-01-30T10:29:27.261867Z",
-     "shell.execute_reply": "2025-01-30T10:29:27.261332Z"
+     "iopub.execute_input": "2025-01-30T11:08:39.538081Z",
+     "iopub.status.busy": "2025-01-30T11:08:39.537710Z",
+     "iopub.status.idle": "2025-01-30T11:08:39.541968Z",
+     "shell.execute_reply": "2025-01-30T11:08:39.541355Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5183a93d",
+   "id": "8a43254c",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "187ea2ee",
+   "id": "d5d70f25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:27.263759Z",
-     "iopub.status.busy": "2025-01-30T10:29:27.263386Z",
-     "iopub.status.idle": "2025-01-30T10:29:27.266587Z",
-     "shell.execute_reply": "2025-01-30T10:29:27.265984Z"
+     "iopub.execute_input": "2025-01-30T11:08:39.543922Z",
+     "iopub.status.busy": "2025-01-30T11:08:39.543596Z",
+     "iopub.status.idle": "2025-01-30T11:08:39.546519Z",
+     "shell.execute_reply": "2025-01-30T11:08:39.546052Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aab371ef",
+   "id": "93a1d305",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cd86136a",
+   "id": "41d99aca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:27.268347Z",
-     "iopub.status.busy": "2025-01-30T10:29:27.268150Z",
-     "iopub.status.idle": "2025-01-30T10:29:29.915320Z",
-     "shell.execute_reply": "2025-01-30T10:29:29.914768Z"
+     "iopub.execute_input": "2025-01-30T11:08:39.548249Z",
+     "iopub.status.busy": "2025-01-30T11:08:39.547897Z",
+     "iopub.status.idle": "2025-01-30T11:08:42.106865Z",
+     "shell.execute_reply": "2025-01-30T11:08:42.106327Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30d554d5",
+   "id": "9ab9aff5",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5e6b5e8",
+   "id": "0d98a981",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12a69c36",
+   "id": "0b761365",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c17e12ac",
+   "id": "67cd0f8a",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9c80b130",
+   "id": "8bf3c557",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:29.917216Z",
-     "iopub.status.busy": "2025-01-30T10:29:29.917026Z",
-     "iopub.status.idle": "2025-01-30T10:29:29.920926Z",
-     "shell.execute_reply": "2025-01-30T10:29:29.920257Z"
+     "iopub.execute_input": "2025-01-30T11:08:42.109091Z",
+     "iopub.status.busy": "2025-01-30T11:08:42.108734Z",
+     "iopub.status.idle": "2025-01-30T11:08:42.112313Z",
+     "shell.execute_reply": "2025-01-30T11:08:42.111718Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb71804ca40>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f00e0247ec0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af038dba",
+   "id": "a55d22b5",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab80c2fc",
+   "id": "2ec33d46",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc3babd3",
+   "id": "84d2944f",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bb8025f",
+   "id": "022de967",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e7b9c9b3",
+   "id": "34d3b36c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:29.922857Z",
-     "iopub.status.busy": "2025-01-30T10:29:29.922536Z",
-     "iopub.status.idle": "2025-01-30T10:29:29.925573Z",
-     "shell.execute_reply": "2025-01-30T10:29:29.924929Z"
+     "iopub.execute_input": "2025-01-30T11:08:42.114352Z",
+     "iopub.status.busy": "2025-01-30T11:08:42.114013Z",
+     "iopub.status.idle": "2025-01-30T11:08:42.117153Z",
+     "shell.execute_reply": "2025-01-30T11:08:42.116501Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5461175b",
+   "id": "e87a610d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:29:29.927438Z",
-     "iopub.status.busy": "2025-01-30T10:29:29.927078Z",
-     "iopub.status.idle": "2025-01-30T10:29:31.005620Z",
-     "shell.execute_reply": "2025-01-30T10:29:31.005019Z"
+     "iopub.execute_input": "2025-01-30T11:08:42.118937Z",
+     "iopub.status.busy": "2025-01-30T11:08:42.118593Z",
+     "iopub.status.idle": "2025-01-30T11:08:43.189500Z",
+     "shell.execute_reply": "2025-01-30T11:08:43.188900Z"
     }
    },
    "outputs": [
