--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c53d0f5e",
+   "id": "90ad97b9",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd740513",
+   "id": "7342d4aa",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7d0171d",
+   "id": "6bb16bb9",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "924ed5a9",
+   "id": "1dcaf6c9",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "590259b5",
+   "id": "a12b8e66",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c8a2ceb",
+   "id": "01f2019e",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7bcfe8ce",
+   "id": "3813de55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:33.620443Z",
-     "iopub.status.busy": "2025-01-30T12:08:33.620219Z",
-     "iopub.status.idle": "2025-01-30T12:08:37.113750Z",
-     "shell.execute_reply": "2025-01-30T12:08:37.113114Z"
+     "iopub.execute_input": "2025-01-30T12:10:02.771532Z",
+     "iopub.status.busy": "2025-01-30T12:10:02.771362Z",
+     "iopub.status.idle": "2025-01-30T12:10:05.734408Z",
+     "shell.execute_reply": "2025-01-30T12:10:05.733866Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77b3407b",
+   "id": "75ea2757",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a45598b",
+   "id": "92ec81f4",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "febb3ea7",
+   "id": "61321d89",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bdad613",
+   "id": "c500e0eb",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca45645a",
+   "id": "66a3e863",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "390642ac",
+   "id": "5ea8e615",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deb4af0e",
+   "id": "58730965",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebd4a315",
+   "id": "56723b36",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5213ecef",
+   "id": "72d706b3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:37.116178Z",
-     "iopub.status.busy": "2025-01-30T12:08:37.115718Z",
-     "iopub.status.idle": "2025-01-30T12:08:39.333615Z",
-     "shell.execute_reply": "2025-01-30T12:08:39.333037Z"
+     "iopub.execute_input": "2025-01-30T12:10:05.736505Z",
+     "iopub.status.busy": "2025-01-30T12:10:05.736247Z",
+     "iopub.status.idle": "2025-01-30T12:10:07.640620Z",
+     "shell.execute_reply": "2025-01-30T12:10:07.640012Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33b8b4e5",
+   "id": "8942d88d",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "26bd4bbe",
+   "id": "1e5bc247",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:39.335654Z",
-     "iopub.status.busy": "2025-01-30T12:08:39.335294Z",
-     "iopub.status.idle": "2025-01-30T12:08:39.338964Z",
-     "shell.execute_reply": "2025-01-30T12:08:39.338396Z"
+     "iopub.execute_input": "2025-01-30T12:10:07.642528Z",
+     "iopub.status.busy": "2025-01-30T12:10:07.642192Z",
+     "iopub.status.idle": "2025-01-30T12:10:07.645542Z",
+     "shell.execute_reply": "2025-01-30T12:10:07.644968Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "760f2f3d",
+   "id": "a485986f",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d57eaec7",
+   "id": "2f5141f8",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70e3db9e",
+   "id": "8a927f2e",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5b3a452",
+   "id": "361fe1d7",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "341950c5",
+   "id": "12021b65",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:39.341134Z",
-     "iopub.status.busy": "2025-01-30T12:08:39.340756Z",
-     "iopub.status.idle": "2025-01-30T12:08:39.388353Z",
-     "shell.execute_reply": "2025-01-30T12:08:39.387696Z"
+     "iopub.execute_input": "2025-01-30T12:10:07.647226Z",
+     "iopub.status.busy": "2025-01-30T12:10:07.647043Z",
+     "iopub.status.idle": "2025-01-30T12:10:07.688742Z",
+     "shell.execute_reply": "2025-01-30T12:10:07.688230Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f0bb9bd",
+   "id": "7d862f1c",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "525d8483",
+   "id": "9f335de1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:39.390570Z",
-     "iopub.status.busy": "2025-01-30T12:08:39.390063Z",
-     "iopub.status.idle": "2025-01-30T12:08:39.466748Z",
-     "shell.execute_reply": "2025-01-30T12:08:39.466219Z"
+     "iopub.execute_input": "2025-01-30T12:10:07.690518Z",
+     "iopub.status.busy": "2025-01-30T12:10:07.690338Z",
+     "iopub.status.idle": "2025-01-30T12:10:07.754504Z",
+     "shell.execute_reply": "2025-01-30T12:10:07.754003Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "452584e8",
+   "id": "35603905",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b047211d",
+   "id": "d96019c3",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "37649747",
+   "id": "26a8f209",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:39.468758Z",
-     "iopub.status.busy": "2025-01-30T12:08:39.468375Z",
-     "iopub.status.idle": "2025-01-30T12:08:39.499147Z",
-     "shell.execute_reply": "2025-01-30T12:08:39.498641Z"
+     "iopub.execute_input": "2025-01-30T12:10:07.756506Z",
+     "iopub.status.busy": "2025-01-30T12:10:07.756137Z",
+     "iopub.status.idle": "2025-01-30T12:10:07.781895Z",
+     "shell.execute_reply": "2025-01-30T12:10:07.781407Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb1c14c",
+   "id": "85f75f94",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a71f157",
+   "id": "72305ebd",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aaaac11",
+   "id": "a42149af",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9302460c",
+   "id": "be14bec7",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d219c00d",
+   "id": "160f9aec",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d9414dd3",
+   "id": "ffc938be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:39.501455Z",
-     "iopub.status.busy": "2025-01-30T12:08:39.500959Z",
-     "iopub.status.idle": "2025-01-30T12:08:39.505259Z",
-     "shell.execute_reply": "2025-01-30T12:08:39.504639Z"
+     "iopub.execute_input": "2025-01-30T12:10:07.783808Z",
+     "iopub.status.busy": "2025-01-30T12:10:07.783455Z",
+     "iopub.status.idle": "2025-01-30T12:10:07.787705Z",
+     "shell.execute_reply": "2025-01-30T12:10:07.787108Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d38a34e0",
+   "id": "6fad2747",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "068060cc",
+   "id": "3cd6ab9c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:39.507311Z",
-     "iopub.status.busy": "2025-01-30T12:08:39.506863Z",
-     "iopub.status.idle": "2025-01-30T12:08:39.509995Z",
-     "shell.execute_reply": "2025-01-30T12:08:39.509424Z"
+     "iopub.execute_input": "2025-01-30T12:10:07.789718Z",
+     "iopub.status.busy": "2025-01-30T12:10:07.789253Z",
+     "iopub.status.idle": "2025-01-30T12:10:07.792256Z",
+     "shell.execute_reply": "2025-01-30T12:10:07.791687Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95bd1f34",
+   "id": "12140f4c",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cff304dc",
+   "id": "2f32f8ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:39.511928Z",
-     "iopub.status.busy": "2025-01-30T12:08:39.511565Z",
-     "iopub.status.idle": "2025-01-30T12:08:42.228059Z",
-     "shell.execute_reply": "2025-01-30T12:08:42.227313Z"
+     "iopub.execute_input": "2025-01-30T12:10:07.793786Z",
+     "iopub.status.busy": "2025-01-30T12:10:07.793626Z",
+     "iopub.status.idle": "2025-01-30T12:10:10.343053Z",
+     "shell.execute_reply": "2025-01-30T12:10:10.342478Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8301fa58",
+   "id": "07b5cffd",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eb4ad61",
+   "id": "184135fe",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f35cddb",
+   "id": "21983815",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69ec766c",
+   "id": "cc6fa596",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7e9fd401",
+   "id": "cd4fed5c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:42.230298Z",
-     "iopub.status.busy": "2025-01-30T12:08:42.230041Z",
-     "iopub.status.idle": "2025-01-30T12:08:42.233749Z",
-     "shell.execute_reply": "2025-01-30T12:08:42.233159Z"
+     "iopub.execute_input": "2025-01-30T12:10:10.345017Z",
+     "iopub.status.busy": "2025-01-30T12:10:10.344834Z",
+     "iopub.status.idle": "2025-01-30T12:10:10.348482Z",
+     "shell.execute_reply": "2025-01-30T12:10:10.347931Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fbe216c45e0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7ff0071b05e0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec90519a",
+   "id": "fb728904",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5068b86a",
+   "id": "849a1b47",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12a6b068",
+   "id": "38e29830",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73e1786",
+   "id": "e317d94f",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "72edd559",
+   "id": "dfe65a20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:42.235668Z",
-     "iopub.status.busy": "2025-01-30T12:08:42.235307Z",
-     "iopub.status.idle": "2025-01-30T12:08:42.238536Z",
-     "shell.execute_reply": "2025-01-30T12:08:42.238018Z"
+     "iopub.execute_input": "2025-01-30T12:10:10.350541Z",
+     "iopub.status.busy": "2025-01-30T12:10:10.350195Z",
+     "iopub.status.idle": "2025-01-30T12:10:10.353031Z",
+     "shell.execute_reply": "2025-01-30T12:10:10.352478Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b7fc3658",
+   "id": "ec9359e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:08:42.240458Z",
-     "iopub.status.busy": "2025-01-30T12:08:42.239985Z",
-     "iopub.status.idle": "2025-01-30T12:08:43.336042Z",
-     "shell.execute_reply": "2025-01-30T12:08:43.335486Z"
+     "iopub.execute_input": "2025-01-30T12:10:10.354915Z",
+     "iopub.status.busy": "2025-01-30T12:10:10.354584Z",
+     "iopub.status.idle": "2025-01-30T12:10:11.413385Z",
+     "shell.execute_reply": "2025-01-30T12:10:11.412857Z"
     }
    },
    "outputs": [
